keystone-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keystone-sslip
  namespace: openstack
  annotations:
    haproxy.org/path-rewrite: "/"
spec:
  ingressClassName: ingress-openstack
  rules:
  - host: keystone.10.8.132.108.sslip.io
    http:
      paths:
      - backend:
          service:
            name: keystone-api
            port:
              name: ks-pub
        path: /
        pathType: Prefix
